# rhexis

./: .gitignore  Cargo.toml  README.md  demo.cmd  demo.sh
docs/: data_put.md  readme.md  registry.md  rhex_workflow.md  scope_lookup.md  thread_hashing_notes.md  what_defines_done.md
docs/lattice/: Lattice Operations.md  Remote Requests.md  Rhex Defined.md  Scope Cache.md  Scope Discovery.md  Scope Resolution.md  Usher Creation.md  Usher Requests.md  What Does Existence Mean.md  What Is A Scope.md  What Is An Usher.md  What Is The Lattice.md
docs/main/: 00-preface.md  01-From Lattice To Reality.md  02-The Ontology Of Computation.md  03-Time As A Physical Primative.md  04-Causality And Record Physics.md  05-The Flux Substrate.md  06-Transforms As Laws Of Nature.md  08-The Membrane Isolation Migration And Continuity.md  09-Determinism Replay And Forking Universes.md  10-Identity And Agency Inside Reality.md  11-Governance As A Physical Process.md  12-Economics Of Permanence.md  13-Security Adversaries In A Law-Bound Universe.md  14-From Simulation To Civilization.md  15-The Road To Emergence.md  D-Glossary Of Ontological Terms.md  outline.md
docs/net/: Communication in the CRE.md
rhex_types/: Cargo.toml
rhex_types/src/: context.rs  intent.rs  lib.rs  signature.rs
rhexis-collections/: Cargo.toml
rhexis-core/: Cargo.toml
rhexis-core/src/: lib.rs
rhexis-core/src/collection/: mod.rs
rhexis-core/src/flux/: availability.rs  item.rs  json.rs  meta.rs  mod.rs  payload.rs  pretty.rs
rhexis-core/src/hpc/: context.rs  descriptor.rs  directive.rs  entry.rs  envelope.rs  errors.rs  hpc_return.rs  mod.rs
rhexis-core/src/membrane/: mod.rs  probe.rs
rhexis-core/src/registry/: mod.rs
rhexis-core/src/rhex/: context.rs  intent.rs  mod.rs  payload.rs  payload_bytes.rs  signature.rs  states.rs
rhexis-core/src/rhp/: descriptor.rs  kind.rs  mod.rs  package.rs
rhexis-core/src/transform/: context.rs  entry.rs  io.rs  mod.rs  pattern.rs  signature.rs  transform_return.rs
rhexis-kernel/: Cargo.toml
rhexis-kernel/src/: cleanup.rs  dump_flux.rs  execute_single.rs  execute_transforms.rs  handle_corr.rs  handle_outputs.rs  ingest_flux.rs  json_path.rs  lib.rs  resolve.rs  scoring.rs  trans_output.rs  update_pressure.rs
rhexis-membrane/: Cargo.toml
rhexis-membrane/src/: directives.rs  lib.rs  loader.rs  net.rs  registry.rs
rhexis-startup/: Cargo.toml
rhexis-startup/src/: corr-test.json  macos-data-put-test.json  main.rs  net-test.json  registry-test.json  rhex-test.json  rhps.json  test-results.txt  test.flux
rhexis-ux/: Cargo.toml
tools/flux/: Cargo.toml
tools/flux/src/: build.rs  corr.json  main.rs  net.json  pack.rs  parse.rs  payload.json  rhex.json  second.json  test-flux.json  thrice.json  unpack.rs  view.rs
tools/lattice/scope-cache/: Cargo.toml
tools/lattice/scope-cache/src/: json.rs  main.rs  pack.rs  scope.table  test.json  view.rs
tools/registry-mod/: Cargo.toml
tools/registry-mod/src/: add.rs  generate.rs  main.rs  remove.rs  update.rs  view.rs
tools/rhp/: Cargo.toml
tools/rhp/src/: main.rs  pack.rs  pack.sh  unpack.rs  view.rs
