[workspace]
members = [
    "rhexis-core",
    "rhexis-kernel",
    "rhexis-membrane",
    "rhexis-startup",
    "rhexis-collections",
    "rhexis-ux", 
    "tools/rhp", 
    "packages/hpcs/time-unix-now_ms", "packages/hpcs/hpc_console_write-macos_apple-v1", 
]

resolver = "3"

[workspace.dependencies]
serde_json = "1.0.145"
anyhow = "1.0.100"
blake3 = "1.8.2"
serde = { version="1.0.228", features=["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.5.53", features=["derive"] }
hex = "0.4.3"
libloading = "0.9.0"