[workspace]
members = [
    "rhexis-core",
    "rhexis-kernel",
    "rhexis-membrane",
    "rhexis-startup",
    "rhexis-collections",
    "rhexis-ux", 
    "tools/rhp", 
    "packages/hpcs/hpc_console_write-macos_apple-v1", 
    "packages/transforms/transform_console_write", 
    "tools/flux", 
    "packages/transforms/transform_math_add", 
    "packages/transforms/transform_convert_math_to_binary", 
    "packages/hpcs/hpc_crypto_hash_blake3-macos_arm64-v1",
    "packages/transforms/transform_crypto_hash_blake3-macos_arm64-v1",
    "rhex_types", 
    "packages/hpcs/hpc_data_put_disk-macos_arm64-v1", 
    "packages/hpcs/hpc_data_get_disk-macos_arm64-v1", 
    "packages/transforms/transform_data_put-macos_arm64-v1", 
    "packages/transforms/transform_data_put_disk-macos_arm64-v1", "packages/transforms/transform_system_membrane_watch-macos_arm64-v1", 
]

resolver = "3"

[workspace.dependencies]
serde_json = "1.0.145"
anyhow = "1.0.100"
blake3 = "1.8.2"
serde = { version="1.0.228", features=["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.5.53", features=["derive"] }
hex = "0.4.3"
libloading = "0.9.0"
base64 = "0.22.1"
