[workspace]
members = [
    "rhexis-core",
    "rhexis-kernel",
    "rhexis-membrane",
    "rhexis-startup",
    "rhexis-collections",
    "rhexis-ux", 
    "tools/rhp", 
    "packages/hpcs/hpc_console_write-macos_apple-v1", 
    "packages/transforms/transform_console_write", 
    "tools/flux", 
    "packages/transforms/transform_math_add", 
    "packages/transforms/transform_convert_math_to_binary", 
    "packages/hpcs/hpc_crypto_hash_blake3-macos_arm64-v1",
    "packages/transforms/transform_crypto_hash_blake3-macos_arm64-v1",
    "rhex_types", 
    "packages/hpcs/hpc_data_put_disk-macos_arm64-v1", 
    "packages/hpcs/hpc_data_get_disk-macos_arm64-v1", 
    "packages/transforms/transform_system_membrane_watch-macos_arm64-v1",
    "packages/hpcs/hpc_crypto_ed25519_generate-macos_arm64-v1", 
    "packages/hpcs/hpc_crypto_ed25519_sign-macos_arm64-v1", 
    "packages/transforms/transform_crypto_ed25519_generate-macos_arm64-v1", 
    "packages/transforms/transform_crypto_ed25519_sign-macos_arm64-v1", 
    "packages/transforms/transform_rhex_ready-macos_arm64-v1", 
    "packages/struct/struct_rhex", 
    "packages/transforms/transform_rhex_store-macos_arm64-v1", 
    "packages/transforms/transform_data_put", 
    "packages/transforms/transform_data_put_disk_fire-macos_arm64-v1", 
    "packages/transforms/transform_data_put_disk_batch", 
    "packages/transforms/transform_lattice_scope_cache_lookup", 
    "packages/struct/struct_lattice", 
    "packages/transforms/transform_lattice_scope_cache_add", 
    "packages/transforms/transform_lattice_scope_cache_remove", 
    "packages/transforms/transform_lattice_scope_cache_update", 
    "packages/transforms/transform_lattice_scope_cache_builder", 
    "packages/transforms/transform_rhex_finalize", 
    "packages/transforms/transform_rhex_analyze_quorum", 
    "packages/transforms/transform_rhex_quorum_add", 
    "packages/transforms/transform_rhex_submit_quorum", 
    "packages/transforms/transform_rhex_quorum_advance", 
    "packages/transforms/transform_rhex_summarize", 
    "packages/transforms/transform_rhex_store_confirm", 
    "packages/transforms/transform_lattice_quorum_request_signatures", 
    "packages/transforms/transform_lattice_quorum_local_sign", 
    "packages/transforms/transform_lattice_quorum_local_signature_collector", 
    "packages/transforms/transform_rhex_quorum_request", 
    "packages/transforms/transform_rhex_usher_submit", 
    "packages/transforms/transform_rhex_author", "packages/transforms/transform_lattice_initializer", "packages/transforms/transform_lattice_scope_cache_load", "packages/transforms/transform_system_registry_init", "packages/transforms/transform_system_registry_load", "packages/struct/struct_registry", "packages/transforms/transform_system_registry_store", "packages/transforms/transform_system_registry_add", "packages/transforms/transform_system_registry_result", "packages/transforms/transform_system_registry_new", "tools/registry-mod", 
]

resolver = "3"

[workspace.dependencies]
serde_json = "1.0.145"
anyhow = "1.0.100"
blake3 = "1.8.2"
serde = { version="1.0.228", features=["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.5.53", features=["derive"] }
hex = "0.4.3"
libloading = "0.9.0"
base64 = "0.22.1"
rand = "0.9.2"
serde-big-array = "0.5.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
