[package]
name = "rhexis-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_cbor.workspace = true
libloading.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
serde-big-array.workspace = true