[package]
name = "rhexis-membrane"
version = "0.1.0"
edition = "2024"

[dependencies]
rhexis-core = { path = "../rhexis-core" }
rhexis-kernel = { path = "../rhexis-kernel" }
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
libloading.workspace = true
blake3.workspace = true
base64.workspace = true
crossbeam.workspace = true
tokio.workspace = true
