[package]
name = "scope-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
rhexis-core = { path = "../../../rhexis-core" }
struct_lattice = { path = "../../../packages/struct/struct_lattice" }
serde_cbor.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
base64.workspace = true